# prototype

./: .gitignore  CMakeLists.txt  ethercat_test  main.c  main.cpp  output.tar(1).bz2
BIPED/: MathUtilities.cpp  N100WP.cpp  biped.cpp
FSM/: FSM.cpp  FSMState.cpp  FSMState_Debug.cpp  FSMState_Passive.cpp  FSMState_Pstand.cpp  FSMState_Tstand.cpp  FSMState_Walking.cpp
control/: Checkjoint.cpp  DesiredCommand.cpp  FootSwingTrajectory.cpp  GaitGenerator.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp  checkjoint.cpp  fuzzy_pid.cpp  pid_controller.cpp  pid_controller.h
include/: CheaterEstimator.h  ControlFSMData.h  DesiredCommand.h  FootSwingTrajectory.h  GaitGenerator.h  LegController.h  N100WP.h  OrientationEstimator.h  StateEstimatorContainer.h  biped.h  checkjoint.h  cppTypes.h  cstruct.h
include/FSM/: FSM.h  FSMState.h  FSMState_Debug.h  FSMState_Passive.h  FSMState_Pstand.h  FSMState_Tstand.h  FSMState_Walking.h
include/control/: fuzzy_pid.h  lip3d.h  pid_controller.h
include/logdata/: datalogger.h
include/math/: Interpolation.h  MathUtilities.h  orientation_tools.h
include/utility/: cppTypes.h
interface/: CheatIO.cpp  CheatIO.h  IOInterface.h  LowLevelCmd.h  LowlevelState.h  cmdpanel.cpp  cmdpanel.h  enumclass.h
output/etc/init.d/: ethercat
output/lib/: libethercat.la  libethercat.so.1.0.0  libethercat_rtdm.la  libethercat_rtdm.so.1.0.0
output/lib/systemd/system/: ethercat.service
output/modules/: ec_generic.ko  ec_master.ko
output/sbin/: ethercatctl
